Fix thumbs size allocations when unvisible

--- a/data/themes/ansel.css
+++ b/data/themes/ansel.css
@@ -2073,29 +2073,37 @@ Details :
 {
   border: 0;
   margin: 0;
-  padding: 0 3px 3px 3px;
+  padding: 3px;
 }
 
 .thumb-top
 {
   border: 0;
   margin: 0;
-  padding: 3px 3px 0 3px;
+  padding: 3px;
 }
 
 /* Set background on thumbnails hover overlays */
 .dt_overlays_hover .thumb-main:hover .thumb-bottom,
 .dt_overlays_hover .thumb-main:selected .thumb-bottom
 {
-  background-image: linear-gradient(rgba(198, 198, 198, 0.7) 0%, rgba(198, 198, 198, 0.7) 90%,rgba(198, 198, 198, 0) 100%);  /* rgb color needs to be set to same color as #thumb-back hover background */
+  background-image: linear-gradient(
+    rgba(198, 198, 198, 0.) 0%,
+    rgba(198, 198, 198, 0.45) 25%,
+    rgba(198, 198, 198, 0.9) 50%,
+    rgba(198, 198, 198, 0.9) 100%);
 }
 
-/* Set background on block infos in last overlay mode and culling/preview modes shown with mouse hover */
-.dt_overlays_hover_block .thumb-image:hover .thumb-bottom
+.dt_overlays_hover .thumb-main:hover .thumb-top,
+.dt_overlays_hover .thumb-main:selected .thumb-top
 {
-  background-image: none;
-  background-color: rgba(220, 220, 220, 0.8);
+  background-image: linear-gradient(
+    rgba(198, 198, 198, 0.9) 0%,
+    rgba(198, 198, 198, 0.9) 50%,
+    rgba(198, 198, 198, 0.45) 75%,
+    rgba(198, 198, 198, 0.) 100%);
 }
+
 
 /*--------------------
   - Thumbnails infos -
